<resources>
    <string name="app_name">Assignment 1</string>
    <string name="Calculator">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_division">/</string>
    <string name="button_multiply">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="button_clear">AC</string>
    <string name="zero_divide">Divide by zero!</string>
    <string name="error">Error!</string>
</resources>